--- a/CS project/Form4.resx
+++ b/CS project/Form4.resx
@@ -998,4 +998,7 @@
         OROUmM/zB1vya1NDU+UvAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="Timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
